--- a/BookManager/pom.xml
+++ b/BookManager/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>jstl-api</artifactId>
-            <version>1.2</version>
+            <version>1.2-rev-1</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.web</groupId>
@@ -64,10 +64,18 @@
             <version>1.2</version>
         </dependency>
 
+        <!--json tool-->
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
-            <version>2.0.20</version>
+            <version>2.0.21.graal</version>
+        </dependency>
+
+        <!-- mybatis -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.11</version>
         </dependency>
 
     </dependencies>
