--- a/BookManager/pom.xml
+++ b/BookManager/pom.xml
@@ -78,6 +78,12 @@
             <version>3.5.11</version>
         </dependency>
 
+        <!-- kaptcha -->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
