--- a/BookPortal/src/main/webapp/WEB-INF/web.xml
+++ b/BookPortal/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,15 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+    <filter>
+        <filter-name>toolFilter</filter-name>
+        <filter-class>cn.fishland.bookportal.filter.ToolFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>toolFilter</filter-name>
+        <servlet-name>ebookServlet</servlet-name>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>ebookServlet</servlet-name>
         <servlet-class>cn.fishland.bookportal.controller.EbookServlet</servlet-class>
@@ -11,4 +20,5 @@
         <servlet-name>ebookServlet</servlet-name>
         <url-pattern>/ebook/*</url-pattern>
     </servlet-mapping>
+
 </web-app>
